--- a/public/client.html
+++ b/public/client.html
@@ -28,13 +28,10 @@
   <!-- this will be the guest user page -->
   <div class="btn-group btn-group-justified" role="group" aria-label="...">
     <div class="btn-group" role="group">
-      <button type="button" onclick="searchForTracks()" class="btn btn-default">Search</button>
+      <button type="button" id="mainSearchTab" class="btn btn-default">Search</button>
     </div>
     <div class="btn-group" role="group">
-      <button type="button" onclick="vote()" class="btn btn-default">UpVote/DownVote</button>
-    </div>
-    <div class="btn-group" role="group">
-      <button type="button" class="btn btn-default">Exit</button>
+      <button type="button" id="mainVoteTab" class="btn btn-default">UpVote/DownVote</button>
     </div>
   </div>
 
@@ -55,7 +52,7 @@
     </tbody>
   </table>	
 
-  <table id="tableResults" class="table table-striped col-md-12">
+  <table id="tableSearchResults" class="table table-striped col-md-12">
     <thead>
       <tr>
         <th class="text-center">Track Name</th>
