--- a/public/main.html
+++ b/public/main.html
@@ -41,6 +41,7 @@
                      </tr>`;
           $('#mainPlaylistRow').append(row)
         })
+      sort.refresh()
       }
     });
   })
