--- a/public/client.html
+++ b/public/client.html
@@ -76,9 +76,9 @@
       return false;
     })    
 
-    socket.on('broadcast track', function(track_id, track_name, artist){
+    socket.on('broadcast track', function(track_id, track_title, artist){
       var playlistRow = `<tr id="${track_id}">
-                         <td class="text-center">${track_name}</td>
+                         <td class="text-center">${track_title}</td>
                          <td class="text-center">${artist}</<td>
                          <td class="text-center">0</td>
                          <td><button class="btn btn-primary up">Vote up</button><button class="btn btn-warning down">Vote down</button></td>
