--- a/public/main.html
+++ b/public/main.html
@@ -28,7 +28,9 @@
           <tbody id="mainPlaylistRow">
           </tbody>
         </table>
-        <p id="users">Current users: </p>
+        <div id="users">Current users: </div>
+        <hr>
+        <div id="vote_feed"></div>
       </div>
   </div>
 <script>
@@ -64,22 +66,28 @@
     $('#mainPlaylistRow').append(row)
   })
 
-  socket.on('increase votes', function(track_id){
+  socket.on('increase votes', function(user_name, track_id){
     id = $(`#${track_id}`).children().last().html();
     id = Number(id) + 1 
     $(`#${track_id}`).children().last().html(id)
+    $('#vote_feed').append(`<p>${user_name} liked a song</p>`)
     sort.refresh()
   })
 
-  socket.on('decrease votes', function(track_id){
+  socket.on('decrease votes', function(user_name, track_id){
     id = $(`#${track_id}`).children().last().html();
     id = Number(id) - 1 
     $(`#${track_id}`).children().last().html(id)
+    $('#vote_feed').append(`<p>${user_name} disliked a song</p>`)
     sort.refresh()
   })
 
-  socket.on('send names', function(name){
-    $('#users').append(name + " , ")
+  socket.on('send names', function(name, id){
+    $('#users').append(`<p data-id=${id}>${name} </p>`)
+  })
+  
+  socket.on('delete name', function(name, id){
+    $(`p[data-id=${id}`).remove();
   })
 
   DZ.init({
