completed bug fixes

--- a/public/client.html
+++ b/public/client.html
@@ -101,6 +101,10 @@
     socket.on('name submit', function(name){
       $('#users').append(name + '');
     })
+
+    socket.on('delete track', function(track_id){
+      
+    })
   </script>
   <script src="tablesort.min.js"></script>
   <script src='tablesort.number.js'></script>
