--- a/public/main.html
+++ b/public/main.html
@@ -14,6 +14,9 @@
       <div class="container" id="main">
         <img id="mic" src="/images/mic.png">
 
+        <div>
+          <span id="currentTrack"></span>
+        </div>
         <div id="dz-root"></div>
         <div id="player" align="center"></div>
 
@@ -28,100 +31,121 @@
           <tbody id="mainPlaylistRow">
           </tbody>
         </table>
-        <div id="users">Current users: </div>
+        <h5>Current users:</h5>
+        <div id="users"></div>
         <hr>
-        <div id="vote_feed"></div>
+        <div id="activity_feed">
+          <p></p>
+        </div>
       </div>
-  </div>
-<script>
-  // Load all songs from database on page load and build initial table 
-  $(document).ready(function(){
-     $.getJSON({
+    </div>
+  <script>
+    // Load all songs from database on page load and build initial table 
+    $(document).ready(function(){
+      $.getJSON({
       url: '/songs',
-      success: function(response){
-        response.forEach(function(json){
-          var row = `<tr id="${json.track_id}">
-                     <td class="text-center">${json.track_name}</td>
-                     <td class="text-center">${json.track_artist}</<td>
-                     <td class="text-center">${json.votes}</td>
-                     </tr>`;
-          $('#mainPlaylistRow').append(row)
-        })
+        success: function(response){
+          response.forEach(function(json){
+            var row = `<tr id="${json.track_id}">
+                       <td class="text-center">${json.track_name}</td>
+                       <td class="text-center">${json.track_artist}</<td>
+                       <td class="text-center">${json.votes}</td>
+                       </tr>`;
+            $('#mainPlaylistRow').append(row)
+          })
+          sort.refresh()
+        }
+      });
+    })
+  </script>
+  <script src='/socket.io/socket.io.js'></script> 
+  <script></script>
+  <script>
+    var socket = io();
+
+    socket.on('broadcast track', function(track_id, track_name, artist){
+      var row = `<tr id="${track_id}">
+                 <td class="text-center">${track_name}</td>
+                 <td class="text-center">${artist}</<td>
+                 <td class="text-center">0</td>
+                 </tr>`;
+      $('#mainPlaylistRow').append(row)
+    })
+
+    socket.on('increase votes', function(user_name, track_id){
+      id = $(`#${track_id}`).children().last().html();
+      id = Number(id) + 1 
+      $(`#${track_id}`).children().last().html(id)
+      $('#activity_feed > p').replaceWith(`<p>${user_name} liked a song</p>`)
+
+
       sort.refresh()
+    })
+
+    socket.on('decrease votes', function(user_name, track_id){
+      id = $(`#${track_id}`).children().last().html();
+      id = Number(id) - 1 
+      $(`#${track_id}`).children().last().html(id)
+      $('#activity_feed > p').replaceWith(`<p>${user_name} disliked a song</p>`)
+      sort.refresh()
+    })
+
+    socket.on('send names', function(name, id){
+      $('#users').append(`<p data-id=${id}>${name} </p>`)
+    })
+    
+    socket.on('delete name', function(name, id){
+      $(`p[data-id=${id}`).remove();
+    })
+
+    socket.on('remove track from playlist', function(track_id){
+      $(`#tablePlaylist tr#${track_id}`).remove();
+    })
+
+    DZ.init({
+      appId  : '190182',
+      channelUrl : 'https://example@example.com',
+      player : {
+        container : 'player',
+        playlist : false,
+        size: 'big',
+        onload : onPlayerLoaded
       }
     });
-  })
-</script>
-<script src='/socket.io/socket.io.js'></script> 
-<script></script>
-<script>
-  var socket = io();
-
-  socket.on('broadcast track', function(track_id, track_name, artist){
-    var row = `<tr id="${track_id}">
-               <td class="text-center">${track_name}</td>
-               <td class="text-center">${artist}</<td>
-               <td class="text-center">0</td>
-               </tr>`;
-    $('#mainPlaylistRow').append(row)
-  })
-
-  socket.on('increase votes', function(user_name, track_id){
-    id = $(`#${track_id}`).children().last().html();
-    id = Number(id) + 1 
-    $(`#${track_id}`).children().last().html(id)
-    $('#vote_feed').append(`<p>${user_name} liked a song</p>`)
-    sort.refresh()
-  })
-
-  socket.on('decrease votes', function(user_name, track_id){
-    id = $(`#${track_id}`).children().last().html();
-    id = Number(id) - 1 
-    $(`#${track_id}`).children().last().html(id)
-    $('#vote_feed').append(`<p>${user_name} disliked a song</p>`)
-    sort.refresh()
-  })
-
-  socket.on('send names', function(name, id){
-    $('#users').append(`<p data-id=${id}>${name} </p>`)
-  })
-  
-  socket.on('delete name', function(name, id){
-    $(`p[data-id=${id}`).remove();
-  })
-
-  DZ.init({
-    appId  : '190182',
-    channelUrl : 'https://example@example.com',
-    player : {
-      container : 'player',
-      playlist : false,
-      size: 'big',
-      onload : onPlayerLoaded
-    }
-  });
-
-  function onPlayerLoaded() {
-    DZ.player.playTracks([15246481]);
-
-    DZ.Event.subscribe('track_end', function(){
-      var track_id = parseInt($("#mainPlaylist tbody tr:nth-child(1").attr('id'))
+    
+    function startPlayer(track_id){
       DZ.player.playTracks([track_id], function(){
         $(`#${track_id}`).remove();
         socket.emit('delete track', track_id)
-      });
-    })   
-  }
+      });  
+    }
 
-</script>
-<script src="tablesort.min.js"></script>
-<script src="tablesort.number.js"></script>
-<script>
-  sort = new Tablesort(document.getElementById('mainPlaylist'), {
-    descending: true
-  });
-</script>
-</body>
+    function onPlayerLoaded() {
+      $("#mic").click(function(){
+        var start_track_id = parseInt($("#mainPlaylist tbody tr:nth-child(1)").attr('id'));
+        startPlayer(start_track_id);          
+      })
+
+      DZ.Event.subscribe('track_end', function(){
+        var track_id = parseInt($("#mainPlaylist tbody tr:nth-child(1)").attr('id'))
+        startPlayer(track_id); 
+      })   
+
+      DZ.Event.subscribe('current_track', function(track){
+        var current = `<h3 id="currentTrack">${track.track.title} <small class="text-muted">By ${track.track.artist.name}</small></h3>`
+        $("#currentTrack").replaceWith(current);
+      });
+    }
+
+  </script>
+  <script src="tablesort.min.js"></script>
+  <script src="tablesort.number.js"></script>
+  <script>
+    sort = new Tablesort(document.getElementById('mainPlaylist'), {
+      descending: true
+    });
+  </script>
+  </body>
 </html>
 
 
