--- a/public/client.html
+++ b/public/client.html
@@ -18,6 +18,7 @@
       <input id="nickname" type="text" class="form-control">
       <button class="btn btn-primary" id="nickname_submit">Submit</button>
     </form>
+
   <!--   <form id="message_form">
       <label>Message: </label>
       <input id="message" type="text">
@@ -30,7 +31,10 @@
         <button type="button" id="mainSearchTab" class="btn btn-default">Search</button>
       </div>
       <div class="btn-group" role="group">
-        <button type="button" id="mainVoteTab" class="btn btn-default">UpVote/DownVote</button>
+        <button type="button" id="mainVoteTab" class="btn btn-default">Vote</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" id="mainPictureTab" class="btn btn-default">Post a picture!</button>
       </div>
     </div>
 
@@ -56,15 +60,24 @@
         <tr>
           <th class="text-center">Track Name</th>
           <th class="text-center">Artist</th>
-<!--           <th class="text-center">Preview</th>
- -->          <th class="text-center"></th>  
+          <th class="text-center">Preview</th>
+          <th class="text-center"></th>  
         </tr>
       </thead>
       <tbody id="searchResults">
       </tbody>
     </table>
+    <h1 id="welcome_h1">Welcome! Hit a tab to get started</h1>
     <div id="users">Current users: </div>
+    <div id="pictureDiv">
+    <form id="uploadForm" enctype="multipart/form-data" action="/uploads" method="post">
+      <input type="file" id="picture_select" name="userPhoto" class="hidden" />
+      <label for="picture_select" id="picture_select_label">Select file</label>
+      <input id="picture_select_submit" type="submit" value="Upload Image" name="submit">
+    </form>
+    </div>
   </div>
+
     
   <script src='/socket.io/socket.io.js'></script> 
   <script src='client.js'></script>  
@@ -116,9 +129,7 @@
       $('#users').append(name + '');
     })
 
-    socket.on('delete track', function(track_id){
-      
-    })
+    socket.on()
   </script>
   <script src="tablesort.min.js"></script>
   <script src='tablesort.number.js'></script>
@@ -128,13 +139,6 @@
     });
   </script>
 
-    <script src="tablesort.min.js"></script>
-    <script src='tablesort.number.js'></script>
-    <script>  
-      sort = new Tablesort(document.getElementById('tablePlaylist'),{
-        descending: true
-      });
-    </script>
   </body>
 </html>
 
