--- a/public/main.html
+++ b/public/main.html
@@ -8,7 +8,7 @@
   </head>
  
   <body>
-    <div class="container">
+    <div class="container" id="wrapper">
     <div class="container" id="header-div">
     </div>
       <div class="container" id="main">
@@ -96,6 +96,10 @@
   
   socket.on('delete name', function(name, id){
     $(`p[data-id=${id}`).remove();
+  })
+
+  socket.on('picture upload', function(picture){
+    $('#wrapper').append(`<img src="/uploads/${picture}">`)
   })
 
   DZ.init({
