--- a/public/main.html
+++ b/public/main.html
@@ -72,15 +72,15 @@
     $('#mainPlaylistRow').append(row)
   })
  
-
   socket.on('increase votes', function(user_name, track_id){
     id = $(`#${track_id}`).children().last().html();
     id = Number(id) + 1 
     $(`#${track_id}`).children().last().html(id)
     if (user_name == null) {
-      $('#activity_feed > p').replaceWith(`<p>A user liked a song</p>`)
+      $('#activity_feed > p').replaceWith(`<p>A user liked a song</p>`);
+      sort.refresh()
     } else {
-      $('#activity_feed > p').replaceWith(`<p>${user_name} liked a song</p>`)
+      $('#activity_feed > p').replaceWith(`<p>${user_name} liked a song</p>`);
       sort.refresh()
     }
   })
@@ -91,6 +91,7 @@
     $(`#${track_id}`).children().last().html(id)
     if (user_name == null) {
       $('#activity_feed > p').replaceWith(`<p>A user disliked a song</p>`)
+      
     } else {
       $('#activity_feed > p').replaceWith(`<p>${user_name} disliked a song</p>`)
       sort.refresh()
@@ -102,7 +103,7 @@
   })
   
   socket.on('delete name', function(name, id){
-    $(`p[data-id=${id}`).remove();
+    $(`p[data-id=${id}]`).remove();
   })
 
   socket.on('remove track from playlist', function(track_id){
