--- a/public/client.html
+++ b/public/client.html
@@ -94,7 +94,7 @@
       var playlistRow = `<tr id="${track_id}">
                          <td class="text-center">${track_title}</td>
                          <td class="text-center">${artist}</<td>
-                         <td class="text-center"></td>
+                         <td class="text-center">0</td>
                          <td><button class="btn btn-primary up">Vote up</button><button class="btn btn-warning down">Vote down</button></td>
                          </tr>`;
       $('#playlist').append(playlistRow);
