--- a/public/main.html
+++ b/public/main.html
@@ -12,8 +12,8 @@
     <div class="row">
      <div id="section_left" class="col-md-4"></div>
         <div class="container col-md-4" id="main">
-          <span id="currentTrack"></span>
           <img id="mic" src="/images/mic.png">
+          <div><span id="currentTrack"></span></div>
 
           <div id="dz-root"></div>
           <div id="player" align="center"></div>
