--- a/public/client.html
+++ b/public/client.html
@@ -106,14 +106,14 @@
     })
 
     socket.on('increase votes', function(user_name, track_id){
-      id = $(`#${track_id}`).children().last().prev().html();
+      var id = $(`#${track_id}`).children().last().prev().html();
       id = Number(id) + 1 
       $(`#${track_id}`).children().last().prev().html(id);
       sort.refresh()
     })
 
     socket.on('decrease votes', function(user_name, track_id){
-      id = $(`#${track_id}`).children().last().prev().html();
+      var id = $(`#${track_id}`).children().last().prev().html();
       id = Number(id) - 1 
       $(`#${track_id}`).children().last().prev().html(id);
       sort.refresh()
