Add client side validation for bad / empty file uploads

--- a/public/client.html
+++ b/public/client.html
@@ -70,6 +70,7 @@
       <label for="picture_select" id="picture_select_label">Select file</label>
       <input id="picture_select_submit" type="submit" value="Upload Image" name="submit">
     </form>
+    <p id="message"></p>
     </div>
     
   </div>
