--- a/public/client.html
+++ b/public/client.html
@@ -34,7 +34,8 @@
     </div>
 
     <div id="autocomplete" class="center-block" style="margin-top: 20px; margin-bottom: 20px;">
-      <input id="search" placeholder="Search for Tracks" class="center-block"></input>
+        <input id="search" placeholder="Search for Tracks" class="center-block form-control"></input>
+      </div>
     </div>
 
     <table id="tablePlaylist" class="table table-striped table-sm">
@@ -67,8 +68,10 @@
     <div id="pictureDiv">
     <form id="uploadForm" enctype="multipart/form-data" action="/uploads" method="post">
       <input type="file" id="picture_select" name="userPhoto" class="hidden" />
-      <label for="picture_select" id="picture_select_label">Select file</label>
-      <input id="picture_select_submit" type="submit" value="Upload Image" name="submit">
+      <label for="picture_select" id="picture_select_label">
+        <img id="camera_icon" src="/images/camera-flat.png">
+      </label>
+      <input id="picture_select_submit" type="submit" value="Upload" name="submit">
     </form>
     <p id="message"></p>
     </div>
